<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/reigsterFragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/emailTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/registerNameTextInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:imeOptions="actionNext">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail_address"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayoutStyle"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/registerTextInputLayout2"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:imeOptions="actionDone">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/create_account"
            android:id="@+id/buttonRegister"
            style="@style/GreenMaterialButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTextInputLayout2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="0dp"/>

    <TextView
            android:id="@+id/tvLogin"
            android:text="@string/already_a_member_login"
            style="@style/LoginRegisterSwitchTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayoutStyle"
            android:id="@+id/registerNameTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="actionNext">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrationProgressBar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
