<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.luasoftware.luapass.MainActivity">

    <item android:id="@+id/action_search"
          android:title="@string/search"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="collapseActionView|always"
          app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/sort_out"
          android:title="@string/sort"
          app:showAsAction="never"/>

    <item android:id="@+id/sign_out"
          android:title="@string/sign_out"
          app:showAsAction="never"/>
</menu>